compiler/tools/fpp-check/test/connection_direct/undef_instance.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/connection_direct/undef_instance.fpp:3.5
    c.out -> c.in
    ^
error: symbol c is not defined
note: looking for a component instance here
